Incremented number of features of datasets + Record time in ms instead of ns

--- a/Measurements.ipynb
+++ b/Measurements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "32df540d-f2df-4d0a-b5cd-52d115cd74e0",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,8 @@
     "import matplotlib.ticker as ticker\n",
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "import gc"
    ]
   },
   {
@@ -28,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b06df284-e48e-47d7-bd5b-a09553cab042",
    "metadata": {},
    "outputs": [],
    "source": [
     "# flag for researching datasets\n",
-    "search = False\n",
+    "search = True\n",
     "# flag for re-measuring time executions\n",
     "measure = True"
    ]
@@ -55,17 +56,21 @@
    "outputs": [],
    "source": [
     "if search:\n",
+    "    # Search datasets from OpenML given these characteristics\n",
     "    query = \"NumberOfInstances > 100000 &\\\n",
     "             NumberOfInstances < 1000000 &\\\n",
-    "             NumberOfNumericFeatures > 3 &\\\n",
-    "             NumberOfNumericFeatures < 25 &\\\n",
+    "             NumberOfNumericFeatures > 10 &\\\n",
+    "             NumberOfNumericFeatures < 50 &\\\n",
     "             NumberOfMissingValues == 0 &\\\n",
     "             NumberOfSymbolicFeatures == 0\"\n",
     "\n",
     "    dataset_dataframe = list_datasets(output_format=\"dataframe\").query(query)\n",
     "    dataset_dataframe = dataset_dataframe.drop_duplicates(['name']).drop_duplicates(['NumberOfNumericFeatures']).sort_values(by=['NumberOfNumericFeatures'])\n",
     "    dataset_ids = dataset_dataframe['did'][:10]\n",
+    "    # Save datasets ids into .csv file\n",
     "    dataset_ids.to_csv('./data/dataset_ids.csv', index=False)\n",
+    "    \n",
+    "# Load datasets    \n",
     "dataset_ids = pd.read_csv('./data/dataset_ids.csv')['did']\n",
     "dataset_list = get_datasets(dataset_ids=dataset_ids)\n",
     "X_list = [dataset.get_data()[0].select_dtypes([np.number]).to_numpy() for dataset in dataset_list]"
@@ -176,7 +181,9 @@
   {
    "cell_type": "markdown",
    "id": "3b8089a4-77b8-4521-8671-5402e2ccc1d5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Helpers"
    ]
@@ -217,7 +224,9 @@
   {
    "cell_type": "markdown",
    "id": "d63ebdb2-8faf-468f-a536-8bf6964a7a5c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Relation tA/tB, n, k"
    ]
@@ -231,7 +240,7 @@
     "- Assignment: **O(ndk)**\n",
     "- Update: **O(d(n+k))**\n",
     "\n",
-    "Even if ideally the complexity of the update should be O(nd) since we are doing only nd sums, we need some work to separate the datapoints using the labels. This leads to extra work which depdends on k. Depending on the implementations we may have the update with complexity O(ndk) or O(d(n+k)). The fastest implementation in numpy is O(d(n+k)).\n",
+    "Even if ideally the complexity of the update should be O(nd) since we are doing only nd suns, we need some work to separate the datapoints using the labels. This leads to extra work which depdends on k. Depending on the implementations we may have the update with complexity O(ndk) or O(d(n+k)). The fastest implementation in numpy is O(d(n+k)).\n",
     "\n",
     "We therefore expect to have: tA/tB O(nk/(n+k)).\n",
     "However, we have that usually n >> k, therefore O(nk/(n+k)) ~ O(k).\n",
@@ -285,7 +294,7 @@
     "# Clean dataset\n",
     "df_clean = clean_dataset(df)\n",
     "# Plot\n",
-    "scatterplot(df_clean, 'n_clusters', 't_A_median', 'Relation k, ratio_AB', 'k', 'ratio_AB')"
+    "scatterplot(df_clean, 'n_clusters', 't_AB_median', 'Relation k, ratio_AB', 'k', 'ratio_AB')"
    ]
   },
   {
@@ -393,6 +402,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "131c61d7-ee62-4195-b9eb-d7e52095d647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = clean_dataset(df_measurements)\n",
+    "scatterplot(df_clean, 'n_clusters', 'ratio_AB_median', 'Relation k, ratio_AB', 'k', 'ratio_AB')\n",
+    "fit_linear_regression(df_clean, 'n_clusters', 'ratio_AB_median')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "70249774-c636-41d3-a167-7625ab86abe5",
    "metadata": {
@@ -442,14 +463,6 @@
     "df_measurements_speculation = pd.read_csv('./data/measurements_speculation.csv')\n",
     "getPlots(df_measurements_speculation, speculation = True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b67fd1d-7b27-4348-841e-dc85555c5f5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
